--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,30 @@ font-weight: 600;
 .toggle-nav i{
     font-size: 25px;
 }
+
+.main-text{
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.main-text h4{
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: 600;  
+    font-size: 3rem;
+}
+.main-text h1{
+    font-weight: 700;
+    font-size: 5rem;
+    margin: 15px 0;
+    color: #ff305b;
+}
+.main-text p{
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: 300;   
+    font-size: 2rem;
+}
 @media (max-width:767px) {
     .navbar{
        flex-direction: column;
@@ -135,31 +159,21 @@ font-weight: 600;
     .navbar .links.active{
         display: flex;
     }
+    .main-text h4{
+        font-size: 2rem;
+    }
+    .main-text h1{
+        font-weight: 700;
+        font-size: 2.2rem;
+        margin: 15px 0;
+        color: #ff305b;
+    }
+    .main-text p{
+        font-family: 'Source Sans Pro', sans-serif;
+        font-weight: 300;   
+        font-size: .95rem;
+    }
 }
-.main-text{
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-.main-text h4{
-    font-family: 'Source Sans Pro', sans-serif;
-    font-weight: 600;  
-    font-size: 3vw;
-}
-.main-text h1{
-    font-weight: 700;
-    font-size: 5.5vw;
-    margin: 15px 0;
-    color: #ff305b;
-}
-.main-text p{
-    font-family: 'Source Sans Pro', sans-serif;
-    font-weight: 300;   
-    font-size: 2.2vw;
-}
-
 /* end header */
 
 /* start about area */
